--- a/index.html
+++ b/index.html
@@ -96,6 +96,31 @@
 
 
     <!-- Seção Nebulosas -->
+    <section id="nebulae" class="py-20 px-4">
+        <div class="max-w-7xl mx-auto">
+            <div class="text-center mb-16">
+                <h2 class="title-font text-3xl md:text-4xl font-bold mb-4">
+                    Nebulosas: <span class="text-purple-400">Berçários Cósmicos</span>
+                </h2>
+                <p class="max-w-3xl mx-auto text-gray-400">
+                    As nebulosas são enormes nuvens de poeira e gás no espaço. Algumas são regiões onde novas estrelas estão se formando, enquanto outras são os restos de estrelas que morreram.
+                </p>
+            </div>
+           
+            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+                <div class="gallery-item" data-keyword="nebula">
+                    <div class="bg-gray-800 rounded-lg overflow-hidden h-64 animate-pulse">
+                        <div class="w-full h-full flex items-center justify-center">
+                            <svg class="w-12 h-12 text-gray-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16l4.586-4.586a2 2 0 012.828 0L16 16m-2-2l1.586-1.586a2 2 0 012.828 0L20 14m-6-6h.01M6 20h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z" />
+                            </svg>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <!-- Seção Galáxias -->
 
