--- a/index.html
+++ b/index.html
@@ -154,6 +154,33 @@
 
     <!-- Seção Planetas -->
 
+    <section id="planets" class="py-20 px-4">
+        <div class="max-w-7xl mx-auto">
+            <div class="text-center mb-16">
+                <h2 class="title-font text-3xl md:text-4xl font-bold mb-4">
+                    Vizinhança Cósmica: <span class="text-yellow-400">Planetas e Luas</span>
+                </h2>
+                <p class="max-w-3xl mx-auto text-gray-400">
+                    Nosso sistema solar abriga uma incrível diversidade de mundos, desde o escaldante Mercúrio até os gigantes gasosos nos confins do sistema.
+                </p>
+            </div>
+           
+            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+                <div class="gallery-item" data-keyword="solar system planets">
+                    <div class="bg-gray-800 rounded-lg overflow-hidden h-64 animate-pulse">
+                        <div class="w-full h-full flex items-center justify-center">
+                            <svg class="w-12 h-12 text-gray-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16l4.586-4.586a2 2 0 012.828 0L16 16m-2-2l1.586-1.586a2 2 0 012.828 0L20 14m-6-6h.01M6 20h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z" />
+                            </svg>
+                        </div>
+                    </div>
+                </div>
+                <!-- Repetir para 8 itens (total 9) -->
+                <!-- ... -->
+            </div>
+        </div>
+    </section>
+
     <!-- Seção Telescópios -->
 
     <!-- Seção Rovers -->
