--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Tailwind CSS via CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Flowbite CSS -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.css" rel="stylesheet" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.css" rel="'stylesheet" />
     <!-- Fontes do Google -->
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&family=Space+Grotesk:wght@300;400;700&display=swap" rel="stylesheet">
     <style>
@@ -237,7 +237,7 @@
         </div>
     </section>
     <!-- Seção Terra -->
-<section id="earth" class="py-20 px-4 bg-gray-800/50">
+<section id="earth" class="bg-gray-800/50">
         <div class="max-w-7xl mx-auto">
             <div class="text-center mb-16">
                 <h2 class="title-font text-3xl md:text-4xl font-bold mb-4">
